unpackaged/main/default/objects/Campaign_Member_Status_Settings__mdt/Campaign_Member_Status_Settings__mdt.object-meta.xml
<CustomObject>
    <description>To determine the Campaign Member Statuses for Campaigns that require more than the standard options of &quot;Sent&quot; and &quot;Responded&quot;.</description>
    <label>Campaign Member Status Settings</label>
    <pluralLabel>Campaign Member Status Settings</pluralLabel>
</CustomObject>