unpackaged/main/default/objects/Campaign_Member_Status_Settings__mdt/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <description>References any new values to the Campaign.Type picklist</description>
    <label>Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Campus Information Session</fullName>
            </value>
            <value>
                <fullName>On-Campus Tour</fullName>
            </value>
            <value>
                <fullName>Off-Campus Recruitment Event</fullName>
            </value>
            <value>
                <fullName>Virtual Information Session</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Generic Event</fullName>
                <isActive>false</isActive>
                <label>Generic Event</label>
            </value>
            <value>
                <fullName>Peer-to-Peer Event</fullName>
                <isActive>false</isActive>
                <label>Peer-to-Peer Event</label>
            </value>
            <value>
                <fullName>Ticketed Event</fullName>
                <isActive>false</isActive>
                <label>Ticketed Event</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>