unpackaged/main/default/objects/Campaign_Member_Status_Settings__mdt/fields/HasResponded__c.field-meta.xml
<CustomField>
    <fullName>HasResponded__c</fullName>
    <defaultValue>true</defaultValue>
    <label>HasResponded</label>
    <type>Checkbox</type>
</CustomField>