unpackaged/main/default/objects/Campaign_Member_Status_Settings__mdt/fields/Status_Label__c.field-meta.xml
<CustomField>
    <fullName>Status_Label__c</fullName>
    <label>Status Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>