unpackaged/main/default/objects/Campaign_Member_Status_Settings__mdt/listViews/Campaign_Status_View.listView-meta.xml
<ListView>
    <fullName>Campaign_Status_View</fullName>
    <columns>MasterLabel</columns>
    <columns>Campaign_Type__c</columns>
    <columns>HasResponded__c</columns>
    <columns>isDefault__c</columns>
    <columns>Status_Label__c</columns>
    <columns>Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>Campaign Status View</label>
</ListView>